// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp.vue handles error alerts based on interaction 1`] = `
<div class="form-card pa-sai mt-0 mt-md-8 ml-md-8 v-card v-sheet v-sheet--outlined theme--light elevation-0 rounded-0">
  <div class="v-card__title">Sign Up form</div>
  <div class="v-card__text">
    <!---->
    <form novalidate="novalidate" class="v-form form-card pa-3">
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="name-input" class="v-label theme--light" style="left: 0px; position: absolute;">Full Name</label><input aria-required="true" autocomplete="name" required="required" autofocus="autofocus" id="name-input" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-email theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="email-input" class="v-label theme--light" style="left: 0px; position: absolute;">Email</label><input aria-required="true" autocomplete="email" required="required" id="email-input" type="email"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-lock theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="password-input" class="v-label theme--light" style="left: 0px; position: absolute;">Password</label><input aria-required="true" autocomplete="new-password" required="required" id="password-input" type="password"></div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-eye-off theme--light"></button></div>
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <transition-stub name="expand-transition">
        <div class="v-sheet theme--light" style="display: none;">
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            8 characters minimum
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 uppercase character
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 lowercase character
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 number
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 special character: !, @, #, $, %, ^, &amp;, *, -, _
          </div>
        </div>
      </transition-stub>
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-lock theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="conf-password-input" class="v-label theme--light" style="left: 0px; position: absolute;">Confirm password</label><input aria-required="true" autocomplete="new-password" required="required" id="conf-password-input" type="password"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div> <button type="button" disabled="disabled" class="v-btn v-btn--block v-btn--disabled v-btn--tile theme--light elevation-0 v-size--default" id="submit-btn"><span class="v-btn__content">
        Submit
      </span></button>
    </form>
  </div>
</div>
`;

exports[`SignUp.vue handles error alerts based on interaction 2`] = `
<div class="form-card pa-sai mt-0 mt-md-8 ml-md-8 v-card v-sheet v-sheet--outlined theme--light elevation-0 rounded-0">
  <div class="v-card__title">Sign Up form</div>
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--border v-alert--dense v-alert--border-left error" id="alert-banner">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark"></i>
        <div class="v-alert__content">
          banner error
        </div>
        <div class="v-alert__border v-alert__border--left"></div>
      </div>
    </div>
    <form novalidate="novalidate" class="v-form form-card pa-3">
      <div class="v-input v-input--has-state theme--light v-text-field error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light error--text"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="name-input" class="v-label theme--light error--text" style="left: 0px; position: absolute;">Full Name</label><input aria-required="true" autocomplete="name" required="required" autofocus="autofocus" id="name-input" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                <div class="v-messages__message">name error</div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input v-input--has-state theme--light v-text-field error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-email theme--light error--text"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="email-input" class="v-label theme--light error--text" style="left: 0px; position: absolute;">Email</label><input aria-required="true" autocomplete="email" required="required" id="email-input" type="email"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                <div class="v-messages__message">email error</div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input v-input--has-state theme--light v-text-field error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-lock theme--light error--text"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="password-input" class="v-label theme--light error--text" style="left: 0px; position: absolute;">Password</label><input aria-required="true" autocomplete="new-password" required="required" id="password-input" type="password"></div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-eye-off theme--light error--text"></button></div>
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                <div class="v-messages__message">password error</div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <transition-stub name="expand-transition">
        <div class="v-sheet theme--light" style="display: none;">
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            8 characters minimum
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 uppercase character
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 lowercase character
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 number
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 special character: !, @, #, $, %, ^, &amp;, *, -, _
          </div>
        </div>
      </transition-stub>
      <div class="v-input v-input--has-state theme--light v-text-field error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-lock theme--light error--text"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="conf-password-input" class="v-label theme--light error--text" style="left: 0px; position: absolute;">Confirm password</label><input aria-required="true" autocomplete="new-password" required="required" id="conf-password-input" type="password"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                <div class="v-messages__message">conf password error</div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div> <button type="button" disabled="disabled" class="v-btn v-btn--block v-btn--disabled v-btn--tile theme--light elevation-0 v-size--default" id="submit-btn"><span class="v-btn__content">
        Submit
      </span></button>
    </form>
  </div>
</div>
`;

exports[`SignUp.vue handles error alerts based on interaction 3`] = `
<div class="form-card pa-sai mt-0 mt-md-8 ml-md-8 v-card v-sheet v-sheet--outlined theme--light elevation-0 rounded-0">
  <div class="v-card__title">Sign Up form</div>
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--border v-alert--dense v-alert--border-left error" id="alert-banner">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark"></i>
        <div class="v-alert__content">
          banner error
        </div>
        <div class="v-alert__border v-alert__border--left"></div>
      </div>
    </div>
    <form novalidate="novalidate" class="v-form form-card pa-3">
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="name-input" class="v-label theme--light" style="left: 0px; position: absolute;">Full Name</label><input aria-required="true" autocomplete="name" required="required" autofocus="autofocus" id="name-input" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-email theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="email-input" class="v-label theme--light" style="left: 0px; position: absolute;">Email</label><input aria-required="true" autocomplete="email" required="required" id="email-input" type="email"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-lock theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="password-input" class="v-label theme--light" style="left: 0px; position: absolute;">Password</label><input aria-required="true" autocomplete="new-password" required="required" id="password-input" type="password"></div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-eye-off theme--light"></button></div>
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <transition-stub name="expand-transition">
        <div class="v-sheet theme--light" style="display: none;">
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            8 characters minimum
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 uppercase character
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 lowercase character
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 number
          </div>
          <div class="error--text"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light error--text"></i>
            1 special character: !, @, #, $, %, ^, &amp;, *, -, _
          </div>
        </div>
      </transition-stub>
      <div class="v-input theme--light v-text-field">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <div class="v-input__icon v-input__icon--prepend-inner"><i aria-hidden="true" class="v-icon notranslate mdi mdi-lock theme--light"></i></div>
            </div>
            <div class="v-text-field__slot"><label for="conf-password-input" class="v-label theme--light" style="left: 0px; position: absolute;">Confirm password</label><input aria-required="true" autocomplete="new-password" required="required" id="conf-password-input" type="password"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div> <button type="button" disabled="disabled" class="v-btn v-btn--block v-btn--disabled v-btn--tile theme--light elevation-0 v-size--default" id="submit-btn"><span class="v-btn__content">
        Submit
      </span></button>
    </form>
  </div>
</div>
`;
